@@ -1,6 +1,5 @@
 package net.datafaker.providers.base;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.regex.Matcher;
@@ -27,7 +26,6 @@ class CredentialsTest {
 
     @ParameterizedTest
     @MethodSource("userNameWithSpacesProvider")
-    @SuppressWarnings("removal")
     void testUsernameWithSpaces(String firstName, String lastName, String expected) {
         Locale locale = new Locale("TR");
         Name name = mock();
@@ -41,7 +39,7 @@ class CredentialsTest {
             }
         };
 
-        assertThat(mockedFaker.internet().username())
+        assertThat(mockedFaker.credentials().username())
             .isEqualTo(expected);
     }
 
@@ -132,7 +130,7 @@ class CredentialsTest {
         final List<String> list = (obj instanceof List<?> l
                 && l.stream().allMatch(String.class::isInstance))
                         ? l.stream().map(String.class::cast).toList()
-                        : Collections.emptyList();
+                        : List.of();
 
         assertThat(faker.credentials().weakPassword()).isIn(list);
     }
